trunk/Archive2/f1/ba10e688367380/output
main.cpp: In function 'bool NotNull(Args ...)':
main.cpp:3:23: error: expected ')' before '...' token
   return true && (args... != nullptr);
                       ^
main.cpp:3:37: error: parameter packs not expanded with '...':
   return true && (args... != nullptr);
                                     ^
main.cpp:3:37: note:         'args'
main.cpp: In instantiation of 'bool NotNull(Args ...) [with Args = {bool, bool, bool}]':
main.cpp:6:29:   required from here
main.cpp:4:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
