trunk/Archive2/f1/ba10e688367380/main.cpp
template <typename... Args>
inline bool NotNull(Args... args) {
  return true && (args... != nullptr);
}
int main() {
  NotNull(true, false, false);
}
